src/main/java/com/example/stream/spring/courses/reactive/example/model/error/DepartmentDeleteOk.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record DepartmentDeleteOk() implements DepartmentSuccess {
}
